--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,7 @@
 // Basic Colors
 $dark-blue:#2a445e;
-$navy: #093E72; /*this one was used before #00507d */ /* #2F4858 */      // Primary blue color //card
-$blue: /*#33658A*/  #007ebf /* #137fbd */;      // Blue color //card
+$navy: #193958; /*this one was used before #00507d */ /* #2F4858 */      // Primary blue color //card
+$blue: /*#33658A*/  #002345 /* #137fbd */;      // Blue color //card
 $light-blue:#30C5FF;  //
 $lazur: #5CC5BB; 
 $green: #9AC539; 
@@ -48,7 +48,7 @@ $top_nav_active: #006EAD;
 $text-color: #676a6c;   // Body text
 $label-badge-color: #5E5E5E;
 $divider: #77a2ba;
-$ifc_black: #16181A;
+$ifc_black: #002345;
 $sidebar_blue: #394046;
 
 // Spiner color and margin
